--- a/librechat.yaml
+++ b/librechat.yaml
@@ -145,6 +145,28 @@ endpoints:
       titleModel: 'meta-llama/llama-3-70b-instruct'
       dropParams: ['stop']
       modelDisplayLabel: 'OpenRouter'
+
+    - name: "Perplexity"
+      apiKey: "${PERPLEXITY_API_KEY}"
+      baseURL: "https://api.perplexity.ai/"
+      models:
+        default: [
+          "llama-3-sonar-small-32k-chat",
+          "llama-3-sonar-small-32k-online",
+          "llama-3-sonar-large-32k-chat",
+          "llama-3-sonar-large-32k-online",
+          "mixtral-8x7b-instruct",
+          "llama-3-8b-instruct",
+          "llama-3-70b-instruct"
+          ]
+        fetch: false # fetching list of models is not supported
+      titleConvo: true
+      titleModel: "llama-3-sonar-small-32k-chat"
+      summarize: false
+      summaryModel: "llama-3-sonar-small-32k-chat"
+      forcePrompt: false
+      dropParams: ["stop", "frequency_penalty"]
+      modelDisplayLabel: "Perplexity"
       
 # Speech configuration
 speech:
